feat(hyperpaas-manager): Added first docker deploy method
